# ServerlessLLM

./: README.en.md  README.md
benchmarks/: cann_benchmark_utils.py
docs/stable/store/: ascend_npu_deployment.md  晟腾NPU一站式部署文档.md
sllm_store/: CMakeLists.txt  requirements-build.txt  requirements.txt  setup.py
sllm_store/cmake/: utils.cmake
sllm_store/csrc/checkpoint/: cann_ipc.cpp  cann_ipc.h  checkpoint.cpp  checkpoint.h  checkpoint_py.cpp
sllm_store/csrc/sllm_store/: cann_error_handling.cpp  cann_error_handling.h  cann_memory.cpp  cann_memory.h  cann_memory_pool.cpp  cann_memory_pool.h  checkpoint_store.cpp  checkpoint_store.h  error_handling.h  gpu_replica.cpp  model.cpp  model.h  pinned_memory_pool.cpp
sllm_store/examples/: cann_save_vllm_model.py
sllm_store/proto/: storage.proto
sllm_store/sllm_store/: cann_utils.py  cli.py  client.py  server.py  torch.py  transformers.py
sllm_store/sllm_store/proto/: storage_pb2.py  storage_pb2_grpc.py
sllm_store/tests/python/: test_cann_basic.py  test_cann_load_model.py  test_cann_load_vllm_model.py  test_cann_save_model.py
sllm_store/vllm_patch/: sllm_load_npu.patch  vllm_ascend.patch
